--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Server port (opsional)
 server.port=8081
+# File upload configuration
+file.upload-dir=uploads/
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
